  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.127 2012/06/05 22:12:55 snikkel Exp $
==========================================================================

2.9100
------

2.9111.520  imp: all: support for benchmarks > 2Gkeys/sec
            chg: all: increase max threads to 512
            imp: x86/amd64: Intel Sandy Bridge EE (#4456)
            imp: x86/amd64: AMD FX (#4455)
            imp: gpu: add -devicenum option (#4306)
            imp: stream: identification of HD7950/HD7970 GPUs
            imp: x86/amd64: AMD APU detection/selection (#4485)
            fix: win64: window settings were not saved to registry
            fix: win: misc gui fixes on 'core throughput' page
            imp: openbsd: cpu and altivec identification
            fix: all: regression in OGR-NG codebase (#4295)
            new: IPv6 support (#2982)

2.9110.519  new: amd64: New GO-2c core
            new: amd64: New GO-2d core
            chg: amd64: Core pre-selection for most processors
            imp: x86/amd64: Intel Sandy Bridge detection/selection
            fix: x86: OGR core pre-selection for Intel Core iX (#4376)
            imp: x86/amd64: AMD APU detection/selection (#4429)
            imp: amd64: Via Nano core selection (#4437)
            imp: x86/amd64: AMD Opeteron 6xxx detection/selection (#4438)
            fix: cuda: processor counts for newer model fermi cards (#4441)
            imp: win: allow CUDA/Stream to coexist (#4274)
            imp: gpu: rename -cpuinfo to -gpuinfo

2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
            fix: all: OGR-NG incorrect node count after full restart