@@ -1,5 +1,5 @@
 /*
- * Copyright distributed.net 1997-2011 - All Rights Reserved
+ * Copyright distributed.net 1997-2012 - All Rights Reserved
  * For use in distributed.net projects only.
  * Any other distribution or use of this source violates copyright.
  *
@@ -18,7 +18,7 @@
 */
 
 const char *triggers_cpp(void) {
-return "@(#)$Id: triggers.cpp,v 1.43 2011/03/31 05:07:30 jlawson Exp $"; }
+return "@(#)$Id: triggers.cpp,v 1.44 2012/06/24 18:26:57 piru Exp $"; }
 
 /* ------------------------------------------------------------------------ */
 
@@ -338,6 +338,10 @@ static const char *__mangle_pauseapp_name(const char *name, int unmangle_it )
 #include <IOKit/pwr_mgt/IOPM.h>
 #include <CoreFoundation/CoreFoundation.h>
 #include <mach/mach_init.h> /* for bootstrap_port */
+#elif (CLIENT_OS == OS_MORPHOS)
+#include <libraries/sensors.h>
+#include <proto/exec.h>
+#include <proto/sensors.h>
 #endif
 
 static int __IsRunningOnBattery(void) /*returns 0=no, >0=yes, <0=err/unknown*/
@@ -682,6 +686,50 @@ static int __IsRunningOnBattery(void) /*returns 0=no, >0=yes, <0=err/unknown*/
     } /* if( IOMasterPort(bootstrap_port, &master) == kIOReturnSuccess ) */
     /* We dont seem to have a PowerManager, disable battery checking. */
     trigstatics.pause_if_no_mains_power = 0;
+    #elif (CLIENT_OS == OS_MORPHOS)
+    {
+      int disableme = 1; /* assume further checking should be disabled */
+      LONG pluggedin = 0;
+      struct Library *SensorsBase;
+      SensorsBase = OpenLibrary("sensors.library", 50);
+      if (SensorsBase)
+      {
+        struct TagItem sensortags[] =
+        {
+          {SENSORS_Type, SensorType_ACPower},
+          {TAG_DONE, 0}
+        };
+        struct TagItem tpluggedin[] =
+        {
+          {SENSORS_ACPower_PluggedIn, (IPTR)&pluggedin},
+          {TAG_DONE, 0}
+        };
+        APTR sensors, sensor;
+
+        sensor = NULL;
+        sensors = ObtainSensorsList(sensortags);
+
+        while ((sensor = NextSensor(sensor, sensors, NULL)) != NULL)
+        {
+          if (GetSensorAttr(sensor, tpluggedin) > 0)
+          {
+            disableme = 0;
+            break;
+          }
+        }
+        ReleaseSensorsList(sensors, NULL);
+
+        CloseLibrary(SensorsBase);
+      }
+      if (disableme) /* disable further checks */
+      {
+        trigstatics.pause_if_no_mains_power = 0;
+      }
+      else
+      {
+        return pluggedin ? 0 : 1;
+      }
+    }
     #endif
   }
   return -1; /* unknown */
@@ -695,6 +743,8 @@ s32 macosx_cputemp();
 extern "C" int dunix_cputemp();
 #elif (CLIENT_CPU == CPU_ATI_STREAM)
 int stream_cputemp();
+#elif (CLIENT_OS == OS_MORPHOS)
+LONG morphos_cputemp(void);
 #endif
 
 static int __CPUTemperaturePoll(void) /*returns 0=no, >0=yes, <0=err/unknown*/
@@ -729,6 +779,13 @@ static int __CPUTemperaturePoll(void) /*returns 0=no, >0=yes, <0=err/unknown*/
       }
     #elif (CLIENT_CPU == CPU_ATI_STREAM)
       cputemp = stream_cputemp();
+    #elif (CLIENT_OS == OS_MORPHOS)
+      cputemp = morphos_cputemp();
+      if (cputemp < 0) {
+        trigstatics.cputemp.hithresh=0; // disable checking on failure
+        trigstatics.cputemp.lothresh=0;
+        trigstatics.cputemp.marking_high = 0;
+      }
     #elif 0 /* other client_os */
       cputemp = fooyaddablahblahbar();
     #endif
